fix scroll alignment when showing less on team + reviews section

--- a/src/features/layout/reviews/reviews.module.scss
+++ b/src/features/layout/reviews/reviews.module.scss
@@ -55,6 +55,7 @@
     display: flex;
     justify-content: center;
     margin-top: 3rem;
+    scroll-margin-top: 50vh;
 
     @media screen and (width > 1050px) {
       display: none;
